# SoftwareEng

./: CMakeLists.txt
cmake/: HelloProjConfig.h.in
mains/: CMakeLists.txt  hello.cpp
src/basic/: CMakeLists.txt
